# wf-runtime

./: .envrc  README.md  pyproject.toml  pytest.ini
docs/: dsl_schema.yaml  rfc-0001-workflow-language-semantics.md
examples/workflows/: add_numbers.yaml  analyze_image.yaml  calculator.yaml  calculator_with_router.yaml  concurrent.yaml  generated-wf.yaml  intent_classifier.yaml  llm_sequential.yaml  map_reduce.yaml  router.yaml
resources/: dsl_schema.yaml  wf_builder_prompt.md
scripts/: generate_schema.py  wfcli.sh
src/wf_runtime/api/: dependencies.py  server.py
src/wf_runtime/api/routes/: workflows.py
src/wf_runtime/backend/: __init__.py  jq.py  sandbox.py
src/wf_runtime/compiler/: builder.py  compiler.py
src/wf_runtime/dsl/: models.py
src/wf_runtime/engine/: executor.py  mappings.py  nodes_registry.py  state.py
src/wf_runtime/engine/nodes/: base.py  end.py  http_request.py  jq_transform.py  llm.py  noop.py  python_code.py  router.py  start.py
src/wf_runtime/schema/: validator.py
tests/: test_backend_jq.py  test_backend_sandbox.py  test_models.py  test_nodes.py  test_sandbox.py  test_schema_validator.py  test_wf_compiler.py  test_wf_executor.py
tests/nodes/: test_http_request_node.py  test_jq_node.py  test_llm_node.py  test_py_node.py
